[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "pyobjc-framework-Cocoa",
]

[tool.hatch.build.targets.wheel]
packages = ["source"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
